--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -118,7 +118,7 @@ h1 {
 #pictureCol img {
 	width: 100%;
 	padding: 0;
-	margin: 0;
+	margin: 0 0 -10px 0;
 }
 
 #personalInfo {
